--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,69 +1,3 @@
-.my-card {
-    max-width: 400px;
-    margin: 20px;
-    .form-inline {
-        margin-bottom: 20px;
-        input {
-            margin-left: 20px;
-        }
-    }
-}
-
-.container {
-    max-width: 95%;
-    margin-left: 20px;
-    margin-top: 30px;
-    .my-card {
-        margin: 30px;
-    }
-    .form-inline {
-        margin-bottom: 15px;
-    }
-    .input {
-        margin-left: 20px;
-    }
-    .my-btn {
-        margin-left: 20px;
-    }
-}
-
-#resultado {
-    min-width: 100%;
-    margin-top: 30px;
-    margin-left: 35%;
-}
-
-.container {
-    .card {
-        margin: 20px;
-        .form-control {
-            margin: 20px;
-            max-width: 280px;
-        }
-    }
-    margin-top:20px;
-    min-width: 400px;
-    label {
-        margin-left: 40px;
-    }
-    #ejer3 {
-        text-align: center;
-    }
-}
-
-.container {
-    .card {
-        margin-top: 20px;
-        color: blue;
-    }
-    max-width :400px;
-    .form-inline {
-        margin: 20px;
-    }
-    .form-control {
-        margin-left: 20px;
-    }
-    #result {
-        margin-left: 50px;
-    }
+.table-bordered {
+    border: none;
 }
